@@ -20,6 +20,8 @@ New features:
 		* Data sampling (random and periodic methods)
 		* Data 'flattening' - convert pivoted data to column base format
 		* Column statistics (size, mean, stddev, etc.) are available in the function dialog
+	* [matrix]
+		* Zooming in the image view
 	* [import]
 		* Import data from Excel .xlsx files using QXlsx library
 		* HDF5: support VLEN data import
